# dockr

./: .gitignore  Cargo.toml  acs.json  acs.out  camera.sh  pay.json
dockr-book/: book.toml
dockr-book/src/: 1_installation.md  2_1_what_happened.md  2_2_json_configuration.md  2_first_module.md  PURPOSE.md  SUMMARY.md
modules/pay/: camera.sh
src/: acs.c  lib.rs  main.rs  main_old.rs
tests/: test.json  test.rs
