[package]
description = "Agnostic containerized application host for rust"
edition = "2021"
name = "dockr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
